@@ -36,6 +36,9 @@ Changes
 Fixes
 =====
 
+ - Fixed an issue that causes aliases used in the select list to get lost on
+   subselect queries.
+
  - The correct error messages and codes are now thrown for REST actions.
 
  - Fixed a bug in the memory accounting of the circuit breaker for HTTP
